# brobizz-rag-openai

data/: pages.json
scripts/: ingest-data.sh
scripts/scraper/: pyproject.toml
scripts/scraper/brobizz_scraper/: web_scraper.py
src/frontend/src/components/: chat.ts
src/ingestion/src/plugins/: ingestion.ts
src/ingestion/src/routes/: root.ts
