[tool.poetry]
name = "brobizz-scraper"
version = "0.1.0"
description = ""
authors = ["Johanne Emilie Jensen <joje@sbf.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
